[gd_scene load_steps=22 format=3 uid="uid://chs3phgxoswr8"]

[ext_resource type="PackedScene" uid="uid://demr2cd0vql4a" path="res://scenes/enemies/enemy.tscn" id="1_fquj4"]
[ext_resource type="Script" uid="uid://b8fuw4gskr2y0" path="res://scenes/enemies/Horf/horf.gd" id="2_3e0vv"]
[ext_resource type="Texture2D" uid="uid://d1omeqaur4moe" path="res://art/characters/Enemies/StillHead/monster_017_gaper.png" id="3_u2fc4"]
[ext_resource type="PackedScene" uid="uid://cw8tl1j433lft" path="res://scenes/enemies/Gaper/death_effect/entity_death_effect.tscn" id="4_1j1lv"]
[ext_resource type="Script" uid="uid://cw5wsa6u3yeob" path="res://scenes/enemies/Horf/launch_state.gd" id="4_2lqoo"]
[ext_resource type="Resource" uid="uid://gydac35uk8rv" path="res://resources/stats/enemies/horf_stats.tres" id="4_mfebm"]
[ext_resource type="Script" uid="uid://ibiy5bx60tbw" path="res://scenes/enemies/Horf/idle_state.gd" id="5_085s0"]
[ext_resource type="Script" uid="uid://c67h2cap3yiow" path="res://scenes/enemies/Horf/shooting_state.gd" id="6_41rlm"]
[ext_resource type="Script" uid="uid://ijlfnfhje486" path="res://components/shake_component.gd" id="9_ptb1j"]
[ext_resource type="Script" uid="uid://cixa1e6ab0wvu" path="res://components/spawner_projectile_component.gd" id="10_8n2sl"]
[ext_resource type="PackedScene" uid="uid://crig8shb7ec6k" path="res://scenes/projectiles/red_projectile/red_projectile.tscn" id="11_e2k5y"]
[ext_resource type="PackedScene" uid="uid://tyh86c8hd5qf" path="res://player_detector.tscn" id="12_e2k5y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_085s0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2lqoo"]
atlas = ExtResource("3_u2fc4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_085s0"]
atlas = ExtResource("3_u2fc4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41rlm"]
atlas = ExtResource("3_u2fc4")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j1lv"]
atlas = ExtResource("3_u2fc4")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_mfebm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2lqoo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_085s0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41rlm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j1lv")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_u2fc4"]
radius = 9.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2lqoo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_41rlm"]
radius = 7.0

[node name="Horf" instance=ExtResource("1_fquj4")]
script = ExtResource("2_3e0vv")

[node name="Head" type="Node2D" parent="." index="0"]

[node name="CollisionShape2D" parent="." index="1"]
visible = false
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_085s0")

[node name="Sprite2D" parent="." index="2"]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_mfebm")
autoplay = "default"

[node name="StatsComponent" parent="." index="3"]
black_health = 9

[node name="MoveComponent" parent="." index="4"]
stats = ExtResource("4_mfebm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_u2fc4")

[node name="HitboxComponent" parent="." index="6"]
visible = false
position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_2lqoo")

[node name="DestroyedComponent" parent="." index="8" node_paths=PackedStringArray("destroy_effect_spawner_component")]
destroy_effect_spawner_component = NodePath("../SpawnerComponent")

[node name="SpawnerComponent" parent="." index="9"]
scene = ExtResource("4_1j1lv")

[node name="StateMachine" parent="." index="10" node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("IdleState")

[node name="LaunchState" type="Node" parent="StateMachine" index="0" node_paths=PackedStringArray("launch_effect_spawner_component")]
script = ExtResource("4_2lqoo")
launch_effect_spawner_component = NodePath("../../LaunchEffectSpawnerComponent")

[node name="IdleState" type="Node" parent="StateMachine" index="1" node_paths=PackedStringArray("shake_component")]
script = ExtResource("5_085s0")
shake_component = NodePath("../../ShakeComponent")
state = 1

[node name="ShootingState" type="Node" parent="StateMachine" index="2"]
script = ExtResource("6_41rlm")
state = 3

[node name="CollisionShape2D2" type="CollisionShape2D" parent="SoftCollision" index="1"]
visible = false
position = Vector2(0, -1)
shape = SubResource("CircleShape2D_41rlm")

[node name="ShakeComponent" type="Node" parent="." index="14" node_paths=PackedStringArray("node")]
script = ExtResource("9_ptb1j")
node = NodePath("../Head")
metadata/_custom_type_script = "uid://ijlfnfhje486"

[node name="SpawnerProjectileComponent" type="Node2D" parent="." index="15"]
script = ExtResource("10_8n2sl")
scene = ExtResource("11_e2k5y")
metadata/_custom_type_script = "uid://cixa1e6ab0wvu"

[node name="FireRate" type="Timer" parent="." index="16"]
autostart = true

[node name="PlayerDetector" parent="." index="17" instance=ExtResource("12_e2k5y")]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
